k8s/bran-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bran
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bran
  template:
    metadata:
      labels:
        app: bran
    spec:
      containers:
        - name: bran
          image: docker.io/crtrojan23/bran:latest
          ports:
            - containerPort: 9999
