k8s/bran-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bran-service
spec:
  selector:
    app: bran
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 9999
  type: ClusterIP
