k8s/deny-hodor.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-hodor
spec:
  podSelector:
    matchLabels:
      app: bran
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: nginx # allow from nginx only
  policyTypes:
    - Ingress
